# alac-encoder-rs-lucianari

./: Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml
.local-ci/workflows/: ci.yml
aetheria-alac/: Cargo.toml
aetheria-alac/src/: golomb.rs
benches/: encoder_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: encode.rs
go/: go.mod
go/alac/: alac.h  encoder.go  writer.go  writer_test.go
go/cmd/orchestrator/: main.go
go/proto/: alac.pb.go  alac.proto  alac_grpc.pb.go
src/: bitwriter.rs  crypto.rs  encoder.rs  ffi.rs  golomb.rs  grpc.rs  lib.rs  predictor.rs  provider.d  simd.rs  stream.rs  wasm.rs
src/audiophile/: mod.rs  mqa.rs  src.rs
src/integrations/: mod.rs  rodio.rs  symphonia.rs
src/mastering/: dither.rs  dsd.rs  verify.rs
src/spatial/: adm.rs  hrtf.rs  layout.rs  mod.rs  upmix.rs
