[package]
name = "alac-encoder-rs-lucianari"
version = "0.1.0"
edition = "2021"
description = "ALAC (vendor Lossless Audio Codec) encoder with SIMD acceleration"
license = "BlueOak-1.0.0"

[dependencies]
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "encoder_bench"
harness = false
