[package]
name = "alac-encoder-rs-lucianari"
version = "0.1.0"
edition = "2021"
description = "ALAC (vendor Lossless Audio Codec) encoder with SIMD acceleration"
license = "BlueOak-1.0.0"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["std"]
std = ["bytes/std"]
async = ["std", "dep:tokio"]
grpc = ["async", "dep:tonic", "dep:prost", "dep:tonic-build", "dep:tokio-stream"]
crypto = ["std", "dep:aes-gcm", "dep:rand"]
ebpf = ["dep:usdt"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
integrations = ["std", "dep:symphonia", "dep:rodio"]
io_uring = ["async", "dep:tokio-uring"]
audiophile = ["std", "dep:rubato", "dep:rand", "dep:twox-hash"]
spatial = ["std", "dep:bwavfile"]

[dependencies]
bytes = { version = "1.12.0", default-features = false }
thiserror = "2.0"
libc = "0.2"
tokio = { version = "1", features = ["io-util", "rt-multi-thread", "macros", "net"], optional = true }
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
usdt = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
symphonia = { version = "0.5", optional = true }
rodio = { version = "0.17", optional = true }
tokio-uring = { version = "0.4", optional = true }
tokio-stream = { version = "0.1", optional = true }
rubato = { version = "0.14", optional = true }
twox-hash = { version = "1.6", optional = true }
bwavfile = { version = "2.0.1", optional = true }

[build-dependencies]
tonic-build = { version = "0.10", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "encoder_bench"
harness = false
