[package]
name = "alac-encoder-rs-lucianari-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.alac-encoder-rs-lucianari]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false
